@@ -18,7 +18,12 @@ public class Constants {
             "RANDOM POISSON","RANDOM TRIANGULAR","RANDOM UNIFORM","RANDOM WEIBULL");
 
     // This symbols are defined by default in every Vensim file
-    public static final List<String> DEFAULT_VENSIM_SYMBOLS= Arrays.asList("TIME", "FINAL TIME", "INITIAL TIME", "SAVEPER", "TIME STEP");
+    public static final List<String> DEFAULT_VENSIM_SYMBOLS= Arrays.asList("TIME", "FINAL_TIME", "INITIAL_TIME", "SAVEPER", "TIME_STEP");
+
+    public static final List<String> EXCEL_FUNCTIONS = List.of("GET_DIRECT_CONSTANTS", "GET_DIRECT_LOOKUPS", "GET_DIRECT_DATA");
+    public static final List<String> EXCEL_DATA = List.of("GET_DIRECT_LOOKUPS", "GET_DIRECT_DATA");
+
+    public static final List<String> VENSIM_DYNAMIC_FUNCTIONS = Arrays.asList("DELAY_BATCH", "DELAY-CONVEYOR", "DELAY_FIXED", "DELAY_INFORMATION", "DELAY_MATRIAL", "DELAY_N", "DELAY_PROFILE", "DELAYP", "DELAY1", "DELAY3", "SMOOTH" , "SMOOTH3", "SMOOTH_N");
 
     public static  final List<String> IGNORED_MAGIC_NUMBERS = Arrays.asList("0","1","100","-1");
 
